k8s/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  replicas: 2
  template:
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: dashboard
          image: ghcr.io/mchill/home/dashboard:latest
          ports:
            - name: http
              containerPort: 80
