k8s/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
