k8s/dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("mchill.io")
      kind: Rule
      services:
        - name: dashboard
          port: 80
